--- a/index.html
+++ b/index.html
@@ -697,8 +697,7 @@
 
                     <!-- Team Member 3 -->
                     <div class="bg-gray-50 rounded-xl p-6 text-center card-hover">
-                        <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=400&h=400&fit=crop"
-                            alt="Dr. H. Mugwagwa"
+                        <img src="" alt="Dr. H. Mugwagwa"
                             class="w-32 h-32 rounded-full mx-auto mb-4 object-cover border-4 border-white shadow-lg">
                         <h4 class="text-xl font-bold text-gray-900 mb-1">Dr. H. Mugwagwa</h4>
                         <p class="text-red-600 font-semibold mb-2">Vice Chairman & Legal Advisor</p>
@@ -771,8 +770,7 @@
 
                     <!-- Team Member 8 -->
                     <div class="bg-gray-50 rounded-xl p-6 text-center card-hover">
-                        <img src="https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?w=400&h=400&fit=crop"
-                            alt="Justine Fuwe"
+                        <img src="" alt="Justine Fuwe"
                             class="w-32 h-32 rounded-full mx-auto mb-4 object-cover border-4 border-white shadow-lg">
                         <h4 class="text-xl font-bold text-gray-900 mb-1">Justine Fuwe</h4>
                         <p class="text-blue-600 font-semibold mb-2">Design Engineer</p>
@@ -786,8 +784,7 @@
 
                     <!-- Team Member 9 -->
                     <div class="bg-gray-50 rounded-xl p-6 text-center card-hover">
-                        <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?w=400&h=400&fit=crop"
-                            alt="Priviledge Mukwaira"
+                        <img src="" alt="Priviledge Mukwaira"
                             class="w-32 h-32 rounded-full mx-auto mb-4 object-cover border-4 border-white shadow-lg">
                         <h4 class="text-xl font-bold text-gray-900 mb-1">Priviledge Mukwaira</h4>
                         <p class="text-blue-600 font-semibold mb-2">Specialist Technician (Huawei Equipment)</p>
