--- a/index.html
+++ b/index.html
@@ -584,8 +584,44 @@
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Project 1 -->
                 <div class="bg-white rounded-xl overflow-hidden shadow-lg card-hover">
-                    <img src="https://images.unsplash.com/photo-1509391366360-2e959784a276?w=600&h=400&fit=crop"
-                        alt="Solar Installation" class="w-full h-48 object-cover">
+                    <div class="image-carousel w-full h-80 md:h-96 relative">
+                        <img src="what_we_do/solar_mounting/solar_mat_south.png" alt="Solar Installation"
+                            class="carousel-image active w-full h-full object-cover" data-carousel="solar-mounting">
+                        <img src="what_we_do/solar_mounting/solar_mat_south2.png" alt="Solar Installation"
+                            class="carousel-image w-full h-full object-cover" data-carousel="solar-mounting">
+                        <img src="what_we_do/solar_mounting/solar1.png" alt="Solar Installation"
+                            class="carousel-image w-full h-full object-cover" data-carousel="solar-mounting">
+                        <img src="what_we_do/solar_mounting/solar2.png" alt="Solar Installation"
+                            class="carousel-image w-full h-full object-cover" data-carousel="solar-mounting">
+                        <img src="what_we_do/solar_mounting/pari1.jpg" alt="Solar Installation"
+                            class="carousel-image w-full h-full object-cover" data-carousel="solar-mounting">
+                        <img src="what_we_do/solar_mounting/pari2.jpg" alt="Solar Installation"
+                            class="carousel-image w-full h-full object-cover" data-carousel="solar-mounting">
+                        <img src="what_we_do/solar_mounting/pari3.jpg" alt="Solar Installation"
+                            class="carousel-image w-full h-full object-cover" data-carousel="solar-mounting">
+                        <img src="what_we_do/solar_mounting/pari4.jpg" alt="Solar Installation"
+                            class="carousel-image w-full h-full object-cover" data-carousel="solar-mounting">
+                        <img src="what_we_do/solar_mounting/pari5.jpg" alt="Solar Installation"
+                            class="carousel-image w-full h-full object-cover" data-carousel="solar-mounting">
+                        <img src="what_we_do/solar_mounting/solar_mounting_1.jpg" alt="Solar Installation"
+                            class="carousel-image w-full h-full object-cover" data-carousel="solar-mounting">
+                        <img src="what_we_do/solar_mounting/harare_church_solar.jpg" alt="Solar Installation"
+                            class="carousel-image w-full h-full object-cover" data-carousel="solar-mounting">
+                        <div class="carousel-indicators">
+                            <span class="carousel-indicator active" data-carousel="solar-mounting"
+                                data-index="0"></span>
+                            <span class="carousel-indicator" data-carousel="solar-mounting" data-index="1"></span>
+                            <span class="carousel-indicator" data-carousel="solar-mounting" data-index="2"></span>
+                            <span class="carousel-indicator" data-carousel="solar-mounting" data-index="3"></span>
+                            <span class="carousel-indicator" data-carousel="solar-mounting" data-index="4"></span>
+                            <span class="carousel-indicator" data-carousel="solar-mounting" data-index="5"></span>
+                            <span class="carousel-indicator" data-carousel="solar-mounting" data-index="6"></span>
+                            <span class="carousel-indicator" data-carousel="solar-mounting" data-index="7"></span>
+                            <span class="carousel-indicator" data-carousel="solar-mounting" data-index="8"></span>
+                            <span class="carousel-indicator" data-carousel="solar-mounting" data-index="9"></span>
+                            <span class="carousel-indicator" data-carousel="solar-mounting" data-index="10"></span>
+                        </div>
+                    </div>
                     <div class="p-6">
                         <div class="flex items-center mb-2">
                             <span class="bg-red-100 text-red-600 px-3 py-1 rounded-full text-xs font-semibold">Renewable
@@ -606,8 +642,13 @@
 
                 <!-- Project 2 -->
                 <div class="bg-white rounded-xl overflow-hidden shadow-lg card-hover">
-                    <img src="https://images.unsplash.com/photo-1625246333195-78d9c38ad449?w=600&h=400&fit=crop"
-                        alt="Substation" class="w-full h-48 object-cover">
+                    <div class="image-carousel w-full h-80 md:h-96 relative">
+                        <img src="what_we_do/substation/sub1.png" alt="Substation"
+                            class="carousel-image active w-full h-full object-cover" data-carousel="substation">
+                        <div class="carousel-indicators">
+                            <span class="carousel-indicator active" data-carousel="substation" data-index="0"></span>
+                        </div>
+                    </div>
                     <div class="p-6">
                         <div class="flex items-center mb-2">
                             <span
@@ -628,14 +669,65 @@
 
                 <!-- Project 3 -->
                 <div class="bg-white rounded-xl overflow-hidden shadow-lg card-hover">
-                    <div class="image-carousel w-full h-48 relative">
-                        <img src="what_we_do/data_center_installation.jpg" alt="Data Centre"
+                    <div class="image-carousel w-full h-80 md:h-96 relative">
+                        <img src="what_we_do/data%20center/Ecobank%20DC_1.jpg" alt="Data Centre"
                             class="carousel-image active w-full h-full object-cover" data-carousel="data-center">
-                        <img src="what_we_do/data_center_installation2.jpg" alt="Data Centre"
+                        <img src="what_we_do/data%20center/Ecobank%20DC_2.jpg" alt="Data Centre"
+                            class="carousel-image w-full h-full object-cover" data-carousel="data-center">
+                        <img src="what_we_do/data%20center/Ecobank%20Project.jpg" alt="Data Centre"
+                            class="carousel-image w-full h-full object-cover" data-carousel="data-center">
+                        <img src="what_we_do/data%20center/Data%20Centre1.jpg" alt="Data Centre"
+                            class="carousel-image w-full h-full object-cover" data-carousel="data-center">
+                        <img src="what_we_do/data%20center/Data%20Centre2.jpg" alt="Data Centre"
+                            class="carousel-image w-full h-full object-cover" data-carousel="data-center">
+                        <img src="what_we_do/data%20center/Data%20Centre3.jpg" alt="Data Centre"
+                            class="carousel-image w-full h-full object-cover" data-carousel="data-center">
+                        <img src="what_we_do/data%20center/Data%20Centre4.jpg" alt="Data Centre"
+                            class="carousel-image w-full h-full object-cover" data-carousel="data-center">
+                        <img src="what_we_do/data%20center/Data%20Centre5.jpg" alt="Data Centre"
+                            class="carousel-image w-full h-full object-cover" data-carousel="data-center">
+                        <img src="what_we_do/data%20center/Data%20Centre6.jpg" alt="Data Centre"
+                            class="carousel-image w-full h-full object-cover" data-carousel="data-center">
+                        <img src="what_we_do/data%20center/Data%20Centre7.jpg" alt="Data Centre"
+                            class="carousel-image w-full h-full object-cover" data-carousel="data-center">
+                        <img src="what_we_do/data%20center/Data%20Centre8.jpg" alt="Data Centre"
+                            class="carousel-image w-full h-full object-cover" data-carousel="data-center">
+                        <img src="what_we_do/data%20center/Data%20Centre9.jpg" alt="Data Centre"
+                            class="carousel-image w-full h-full object-cover" data-carousel="data-center">
+                        <img src="what_we_do/data%20center/Data%20Centre10.jpg" alt="Data Centre"
+                            class="carousel-image w-full h-full object-cover" data-carousel="data-center">
+                        <img src="what_we_do/data%20center/Data%20Centre11.jpg" alt="Data Centre"
+                            class="carousel-image w-full h-full object-cover" data-carousel="data-center">
+                        <img src="what_we_do/data%20center/Data%20Centre12.jpg" alt="Data Centre"
+                            class="carousel-image w-full h-full object-cover" data-carousel="data-center">
+                        <img src="what_we_do/data%20center/Data%20Centre13.jpg" alt="Data Centre"
+                            class="carousel-image w-full h-full object-cover" data-carousel="data-center">
+                        <img src="what_we_do/data%20center/data_center_installation.jpg" alt="Data Centre"
+                            class="carousel-image w-full h-full object-cover" data-carousel="data-center">
+                        <img src="what_we_do/data%20center/data_center_installation2.jpg" alt="Data Centre"
+                            class="carousel-image w-full h-full object-cover" data-carousel="data-center">
+                        <img src="what_we_do/data%20center/data_center_installation3.jpg" alt="Data Centre"
                             class="carousel-image w-full h-full object-cover" data-carousel="data-center">
                         <div class="carousel-indicators">
                             <span class="carousel-indicator active" data-carousel="data-center" data-index="0"></span>
                             <span class="carousel-indicator" data-carousel="data-center" data-index="1"></span>
+                            <span class="carousel-indicator" data-carousel="data-center" data-index="2"></span>
+                            <span class="carousel-indicator" data-carousel="data-center" data-index="3"></span>
+                            <span class="carousel-indicator" data-carousel="data-center" data-index="4"></span>
+                            <span class="carousel-indicator" data-carousel="data-center" data-index="5"></span>
+                            <span class="carousel-indicator" data-carousel="data-center" data-index="6"></span>
+                            <span class="carousel-indicator" data-carousel="data-center" data-index="7"></span>
+                            <span class="carousel-indicator" data-carousel="data-center" data-index="8"></span>
+                            <span class="carousel-indicator" data-carousel="data-center" data-index="9"></span>
+                            <span class="carousel-indicator" data-carousel="data-center" data-index="10"></span>
+                            <span class="carousel-indicator" data-carousel="data-center" data-index="11"></span>
+                            <span class="carousel-indicator" data-carousel="data-center" data-index="12"></span>
+                            <span class="carousel-indicator" data-carousel="data-center" data-index="13"></span>
+                            <span class="carousel-indicator" data-carousel="data-center" data-index="14"></span>
+                            <span class="carousel-indicator" data-carousel="data-center" data-index="15"></span>
+                            <span class="carousel-indicator" data-carousel="data-center" data-index="16"></span>
+                            <span class="carousel-indicator" data-carousel="data-center" data-index="17"></span>
+                            <span class="carousel-indicator" data-carousel="data-center" data-index="18"></span>
                         </div>
                     </div>
                     <div class="p-6">
@@ -658,8 +750,24 @@
 
                 <!-- Project 4 -->
                 <div class="bg-white rounded-xl overflow-hidden shadow-lg card-hover">
-                    <img src="https://images.unsplash.com/photo-1581092160562-40aa08e78837?w=600&h=400&fit=crop"
-                        alt="Road Construction" class="w-full h-48 object-cover">
+                    <div class="image-carousel w-full h-80 md:h-96 relative">
+                        <img src="what_we_do/road_n_infrustructure/road1.png" alt="Road Construction"
+                            class="carousel-image active w-full h-full object-cover"
+                            data-carousel="road-infrastructure">
+                        <img src="what_we_do/road_n_infrustructure/road2.png" alt="Road Construction"
+                            class="carousel-image w-full h-full object-cover" data-carousel="road-infrastructure">
+                        <img src="what_we_do/road_n_infrustructure/road3.png" alt="Road Construction"
+                            class="carousel-image w-full h-full object-cover" data-carousel="road-infrastructure">
+                        <img src="what_we_do/road_n_infrustructure/road4.png" alt="Road Construction"
+                            class="carousel-image w-full h-full object-cover" data-carousel="road-infrastructure">
+                        <div class="carousel-indicators">
+                            <span class="carousel-indicator active" data-carousel="road-infrastructure"
+                                data-index="0"></span>
+                            <span class="carousel-indicator" data-carousel="road-infrastructure" data-index="1"></span>
+                            <span class="carousel-indicator" data-carousel="road-infrastructure" data-index="2"></span>
+                            <span class="carousel-indicator" data-carousel="road-infrastructure" data-index="3"></span>
+                        </div>
+                    </div>
                     <div class="p-6">
                         <div class="flex items-center mb-2">
                             <span
@@ -679,8 +787,22 @@
 
                 <!-- Project 5 -->
                 <div class="bg-white rounded-xl overflow-hidden shadow-lg card-hover">
-                    <img src="https://images.unsplash.com/photo-1621905251918-48416bd8575a?w=600&h=400&fit=crop"
-                        alt="Power Lines" class="w-full h-48 object-cover">
+                    <div class="image-carousel w-full h-80 md:h-96 relative">
+                        <img src="what_we_do/monopole/mono1.png" alt="Power Lines"
+                            class="carousel-image active w-full h-full object-cover" data-carousel="monopole">
+                        <img src="what_we_do/monopole/mono2.jpg" alt="Power Lines"
+                            class="carousel-image w-full h-full object-cover" data-carousel="monopole">
+                        <img src="what_we_do/monopole/mono3.jpg" alt="Power Lines"
+                            class="carousel-image w-full h-full object-cover" data-carousel="monopole">
+                        <img src="what_we_do/monopole/mono4.png" alt="Power Lines"
+                            class="carousel-image w-full h-full object-cover" data-carousel="monopole">
+                        <div class="carousel-indicators">
+                            <span class="carousel-indicator active" data-carousel="monopole" data-index="0"></span>
+                            <span class="carousel-indicator" data-carousel="monopole" data-index="1"></span>
+                            <span class="carousel-indicator" data-carousel="monopole" data-index="2"></span>
+                            <span class="carousel-indicator" data-carousel="monopole" data-index="3"></span>
+                        </div>
+                    </div>
                     <div class="p-6">
                         <div class="flex items-center mb-2">
                             <span class="bg-red-100 text-red-600 px-3 py-1 rounded-full text-xs font-semibold">Power
