--- a/index.html
+++ b/index.html
@@ -820,7 +820,7 @@
                     </div>
                 </div>
 
-                <!-- Project 6 -->
+                <!-- Project 6
                 <div class="bg-white rounded-xl overflow-hidden shadow-lg card-hover">
                     <img src="https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?w=600&h=400&fit=crop"
                         alt="Building Construction" class="w-full h-48 object-cover">
@@ -840,7 +840,7 @@
                             <li><i class="fas fa-check text-teal-600 mr-2"></i>Foundation Works</li>
                         </ul>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
