--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@
                     </div>
                 </div>
                 <div class="hidden md:block">
-                    <img src="https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?w=800&h=600&fit=crop"
-                        alt="Engineering Excellence" class="rounded-2xl shadow-2xl">
+                    <img src="images/hero_section/hero.jpg" alt="Engineering Excellence"
+                        class="rounded-2xl shadow-2xl w-full h-auto">
                 </div>
             </div>
         </div>
