adjust staff images

--- a/index.html
+++ b/index.html
@@ -159,6 +159,11 @@
             width: 24px;
             border-radius: 4px;
         }
+
+        /* Team member image positioning */
+        .team-member-img {
+            object-position: center 30% !important;
+        }
     </style>
 </head>
 
@@ -863,7 +868,7 @@
                     <!-- Team Member 1 -->
                     <div class="bg-gray-50 rounded-xl p-6 text-center card-hover">
                         <img src="images/staff/Trymore.jpg" alt="Eng. Trymore Sharata"
-                            class="w-32 h-32 rounded-full mx-auto mb-4 object-cover border-4 border-white shadow-lg">
+                            class="w-32 h-32 rounded-full mx-auto mb-4 object-cover border-4 border-white shadow-lg team-member-img">
                         <h4 class="text-xl font-bold text-gray-900 mb-1">Eng. Trymore Sharata</h4>
                         <p class="text-red-600 font-semibold mb-2">Chairman</p>
                         <p class="text-sm text-gray-600 mb-3">MBA(Z), BSc Elec. Eng. (UZ), PMP</p>
@@ -876,7 +881,7 @@
                     <!-- Team Member 2 -->
                     <div class="bg-gray-50 rounded-xl p-6 text-center card-hover">
                         <img src="images/staff/Salome.jpg" alt="Salome Soneni Chikondo"
-                            class="w-32 h-32 rounded-full mx-auto mb-4 object-cover border-4 border-white shadow-lg">
+                            class="w-32 h-32 rounded-full mx-auto mb-4 object-cover border-4 border-white shadow-lg team-member-img">
                         <h4 class="text-xl font-bold text-gray-900 mb-1">Salome Soneni Chikondo</h4>
                         <p class="text-red-600 font-semibold mb-2">Advisory Board</p>
                         <p class="text-sm text-gray-600 mb-3">BSc Management & Entrepreneurial Dev Studies, WUA</p>
@@ -889,7 +894,7 @@
                     <!-- Team Member 3 -->
                     <div class="bg-gray-50 rounded-xl p-6 text-center card-hover">
                         <img src="images/staff/mugwagwa.jpg" alt="Dr. H. Mugwagwa"
-                            class="w-32 h-32 rounded-full mx-auto mb-4 object-cover border-4 border-white shadow-lg">
+                            class="w-32 h-32 rounded-full mx-auto mb-4 object-cover border-4 border-white shadow-lg team-member-img">
                         <h4 class="text-xl font-bold text-gray-900 mb-1">Dr. H. Mugwagwa</h4>
                         <p class="text-red-600 font-semibold mb-2">Vice Chairman & Legal Advisor</p>
                         <p class="text-sm text-gray-600 mb-3">Juris Doctor, University of Baltimore School of Law</p>
@@ -902,7 +907,7 @@
                     <!-- Team Member 4 -->
                     <div class="bg-gray-50 rounded-xl p-6 text-center card-hover">
                         <img src="images/staff/Tawanda.jpg" alt="Tawanda Machaka"
-                            class="w-32 h-32 rounded-full mx-auto mb-4 object-cover border-4 border-white shadow-lg">
+                            class="w-32 h-32 rounded-full mx-auto mb-4 object-cover border-4 border-white shadow-lg team-member-img">
                         <h4 class="text-xl font-bold text-gray-900 mb-1">Tawanda Machaka</h4>
                         <p class="text-red-600 font-semibold mb-2">PM Civil & Structural Engineering</p>
                         <p class="text-sm text-gray-600 mb-3">B. Eng Civil Eng</p>
@@ -921,7 +926,7 @@
                     <!-- Team Member 5 -->
                     <div class="bg-gray-50 rounded-xl p-6 text-center card-hover">
                         <img src="images/staff/Beloved.jpg" alt="Beloved Baradze"
-                            class="w-32 h-32 rounded-full mx-auto mb-4 object-cover border-4 border-white shadow-lg">
+                            class="w-32 h-32 rounded-full mx-auto mb-4 object-cover border-4 border-white shadow-lg team-member-img">
                         <h4 class="text-xl font-bold text-gray-900 mb-1">Beloved Baradze</h4>
                         <p class="text-blue-600 font-semibold mb-2">Design Engineer</p>
                         <p class="text-sm text-gray-600 mb-3">BSc (Hons) Electrical Eng. (UZ)</p>
@@ -935,7 +940,7 @@
                     <!-- Team Member 6 -->
                     <div class="bg-gray-50 rounded-xl p-6 text-center card-hover">
                         <img src="images/staff/Talent.jpg" alt="Talent Fortune Mutyasira"
-                            class="w-32 h-32 rounded-full mx-auto mb-4 object-cover border-4 border-white shadow-lg">
+                            class="w-32 h-32 rounded-full mx-auto mb-4 object-cover border-4 border-white shadow-lg team-member-img">
                         <h4 class="text-xl font-bold text-gray-900 mb-1">Talent Fortune Mutyasira</h4>
                         <p class="text-blue-600 font-semibold mb-2">Technical Projects Manager</p>
                         <p class="text-sm text-gray-600 mb-3">BSc (Hons) Medical Analytics & Informatics (UZ)</p>
@@ -949,7 +954,7 @@
                     <!-- Team Member 7 -->
                     <div class="bg-gray-50 rounded-xl p-6 text-center card-hover">
                         <img src="images/staff/Tawanda.jpg" alt="Tawanda Mabvadya"
-                            class="w-32 h-32 rounded-full mx-auto mb-4 object-cover border-4 border-white shadow-lg">
+                            class="w-32 h-32 rounded-full mx-auto mb-4 object-cover border-4 border-white shadow-lg team-member-img">
                         <h4 class="text-xl font-bold text-gray-900 mb-1">Tawanda Mabvadya</h4>
                         <p class="text-blue-600 font-semibold mb-2">Technical Engineer</p>
                         <p class="text-sm text-gray-600 mb-3">BSc (Hons) Electrical Eng. (UZ)</p>
@@ -962,7 +967,7 @@
                     <!-- Team Member 8 -->
                     <div class="bg-gray-50 rounded-xl p-6 text-center card-hover">
                         <img src="images/staff/fuwe.jpg" alt="Justine Fuwe"
-                            class="w-32 h-32 rounded-full mx-auto mb-4 object-cover border-4 border-white shadow-lg">
+                            class="w-32 h-32 rounded-full mx-auto mb-4 object-cover border-4 border-white shadow-lg team-member-img">
                         <h4 class="text-xl font-bold text-gray-900 mb-1">Justine Fuwe</h4>
                         <p class="text-blue-600 font-semibold mb-2">Design Engineer</p>
                         <p class="text-sm text-gray-600 mb-3">BSc (Hons) Electrical Eng. (UZ)</p>
@@ -976,7 +981,7 @@
                     <!-- Team Member 9 -->
                     <div class="bg-gray-50 rounded-xl p-6 text-center card-hover">
                         <img src="images/staff/mukwaira.png" alt="Priviledge Mukwaira"
-                            class="w-32 h-32 rounded-full mx-auto mb-4 object-cover border-4 border-white shadow-lg">
+                            class="w-32 h-32 rounded-full mx-auto mb-4 object-cover border-4 border-white shadow-lg team-member-img">
                         <h4 class="text-xl font-bold text-gray-900 mb-1">Priviledge Mukwaira</h4>
                         <p class="text-blue-600 font-semibold mb-2">Specialist Technician (Huawei Equipment)</p>
                         <p class="text-sm text-gray-600 mb-3">Professional Technician</p>
