--- a/index.html
+++ b/index.html
@@ -20,151 +20,8 @@
     <!-- Font Awesome for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-    <style>
-        * {
-            font-family: 'Nunito', sans-serif;
-        }
-
-        :root {
-            --primary-red: #DC2626;
-            --primary-blue: #2563EB;
-            --light-blue: #3B82F6;
-            --dark-blue: #1E40AF;
-            --accent-teal: #06B6D4;
-        }
-
-        .gradient-bg {
-            background: linear-gradient(135deg, var(--primary-red) 0%, var(--primary-blue) 100%);
-        }
-
-        .text-gradient {
-            background: linear-gradient(135deg, var(--primary-red) 0%, var(--primary-blue) 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-        }
-
-        .section-padding {
-            padding: 5rem 0;
-        }
-
-        .card-hover {
-            transition: all 0.3s ease;
-        }
-
-        .card-hover:hover {
-            transform: translateY(-8px);
-            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
-        }
-
-        .smooth-scroll {
-            scroll-behavior: smooth;
-        }
-
-        .hero-pattern {
-            background-image:
-                radial-gradient(circle at 20% 50%, rgba(37, 99, 235, 0.1) 0%, transparent 50%),
-                radial-gradient(circle at 80% 80%, rgba(220, 38, 38, 0.1) 0%, transparent 50%);
-        }
-
-        .logo-img {
-            height: 70px;
-            width: auto;
-            max-width: 350px;
-            object-fit: contain;
-            display: block;
-            border: none;
-            outline: none;
-        }
-
-        .logo-img-footer {
-            height: 80px;
-            width: auto;
-            max-width: 400px;
-            object-fit: contain;
-            display: block;
-            border: none;
-            outline: none;
-        }
-
-        @media (max-width: 768px) {
-            .logo-img {
-                height: 60px;
-                max-width: 280px;
-            }
-        }
-
-        @media (max-width: 640px) {
-            .logo-img {
-                height: 50px;
-                max-width: 220px;
-            }
-
-            .logo-img-footer {
-                height: 60px;
-                max-width: 300px;
-            }
-        }
-
-        /* Image Carousel Styles */
-        .image-carousel {
-            position: relative;
-            width: 100%;
-            overflow: hidden;
-        }
-
-        .image-carousel[style*="height"] {
-            height: 100%;
-        }
-
-        .carousel-image {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            opacity: 0;
-            transition: opacity 1s ease-in-out;
-        }
-
-        .carousel-image[style*="height"] {
-            height: 100%;
-        }
-
-        .carousel-image.active {
-            opacity: 1;
-            position: relative;
-        }
-
-        .carousel-indicators {
-            position: absolute;
-            bottom: 10px;
-            left: 50%;
-            transform: translateX(-50%);
-            display: flex;
-            gap: 8px;
-            z-index: 10;
-        }
-
-        .carousel-indicator {
-            width: 8px;
-            height: 8px;
-            border-radius: 50%;
-            background: rgba(255, 255, 255, 0.5);
-            cursor: pointer;
-            transition: all 0.3s ease;
-        }
-
-        .carousel-indicator.active {
-            background: white;
-            width: 24px;
-            border-radius: 4px;
-        }
-
-        /* Team member image positioning */
-        .team-member-img {
-            object-position: center 10% !important;
-        }
-    </style>
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body class="smooth-scroll bg-gray-50">
@@ -1354,223 +1211,8 @@
         <i class="fas fa-arrow-up"></i>
     </button>
 
-    <!-- JavaScript -->
-    <script>
-        // Mobile Menu Toggle
-        const mobileMenuBtn = document.getElementById('mobile-menu-btn');
-        const mobileMenu = document.getElementById('mobile-menu');
-
-        if (mobileMenuBtn && mobileMenu) {
-            mobileMenuBtn.addEventListener('click', () => {
-                mobileMenu.classList.toggle('hidden');
-            });
-        }
-
-        // Close mobile menu when clicking on a link
-        const mobileLinks = document.querySelectorAll('#mobile-menu a');
-        mobileLinks.forEach(link => {
-            link.addEventListener('click', () => {
-                mobileMenu.classList.add('hidden');
-            });
-        });
-
-        // Navbar scroll effect
-        let lastScroll = 0;
-        const navbar = document.querySelector('nav');
-
-        window.addEventListener('scroll', () => {
-            const currentScroll = window.pageYOffset;
-
-            if (currentScroll > 100) {
-                navbar.classList.add('shadow-lg');
-            } else {
-                navbar.classList.remove('shadow-lg');
-            }
-
-            lastScroll = currentScroll;
-        });
-
-        // Back to Top Button
-        const backToTopBtn = document.getElementById('back-to-top');
-
-        window.addEventListener('scroll', () => {
-            if (window.pageYOffset > 300) {
-                backToTopBtn.classList.remove('opacity-0', 'invisible');
-                backToTopBtn.classList.add('opacity-100', 'visible');
-            } else {
-                backToTopBtn.classList.add('opacity-0', 'invisible');
-                backToTopBtn.classList.remove('opacity-100', 'visible');
-            }
-        });
-
-        backToTopBtn.addEventListener('click', () => {
-            window.scrollTo({
-                top: 0,
-                behavior: 'smooth'
-            });
-        });
-
-        // Form Submission Handler
-        function handleFormSubmit(event) {
-            event.preventDefault();
-
-            const form = document.getElementById('contact-form');
-            const formMessage = document.getElementById('form-message');
-            const submitBtn = form.querySelector('button[type="submit"]');
-
-            // Get form data
-            const formData = new FormData(form);
-            const data = {
-                name: formData.get('name'),
-                email: formData.get('email'),
-                phone: formData.get('phone'),
-                subject: formData.get('subject'),
-                message: formData.get('message')
-            };
-
-            // Disable submit button
-            submitBtn.disabled = true;
-            submitBtn.innerHTML = '<i class="fas fa-spinner fa-spin mr-2"></i>Sending...';
-
-            // Simulate form submission (replace with actual API call)
-            setTimeout(() => {
-                formMessage.classList.remove('hidden');
-                formMessage.classList.add('bg-green-100', 'text-green-800', 'border', 'border-green-400');
-                formMessage.innerHTML = '<i class="fas fa-check-circle mr-2"></i>Thank you! Your message has been sent successfully. We will get back to you soon.';
-
-                // Reset form
-                form.reset();
-
-                // Re-enable submit button
-                submitBtn.disabled = false;
-                submitBtn.innerHTML = '<i class="fas fa-paper-plane mr-2"></i>Send Message';
-
-                // Hide message after 5 seconds
-                setTimeout(() => {
-                    formMessage.classList.add('hidden');
-                }, 5000);
-            }, 1500);
-        }
-
-        // Smooth scroll for anchor links
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                const target = document.querySelector(this.getAttribute('href'));
-                if (target) {
-                    const offsetTop = target.offsetTop - 80;
-                    window.scrollTo({
-                        top: offsetTop,
-                        behavior: 'smooth'
-                    });
-                }
-            });
-        });
-
-        // Intersection Observer for fade-in animations
-        const observerOptions = {
-            threshold: 0.1,
-            rootMargin: '0px 0px -50px 0px'
-        };
-
-        const observer = new IntersectionObserver((entries) => {
-            entries.forEach(entry => {
-                if (entry.isIntersecting) {
-                    entry.target.classList.add('animate-fade-in');
-                }
-            });
-        }, observerOptions);
-
-        // Observe all sections
-        document.querySelectorAll('section').forEach(section => {
-            observer.observe(section);
-        });
-
-        // Add fade-in animation class
-        const style = document.createElement('style');
-        style.textContent = `
-            @keyframes fadeIn {
-                from {
-                    opacity: 0;
-                    transform: translateY(20px);
-                }
-                to {
-                    opacity: 1;
-                    transform: translateY(0);
-                }
-            }
-            .animate-fade-in {
-                animation: fadeIn 0.6s ease-out forwards;
-            }
-        `;
-        document.head.appendChild(style);
-
-        // Image Carousel Auto-Rotation
-        function initImageCarousels() {
-            const carousels = {};
-            const carouselElements = document.querySelectorAll('[data-carousel]');
-
-            // Group images by carousel name
-            carouselElements.forEach(element => {
-                const carouselName = element.getAttribute('data-carousel');
-                if (!carousels[carouselName]) {
-                    carousels[carouselName] = {
-                        images: [],
-                        indicators: [],
-                        currentIndex: 0
-                    };
-                }
-
-                if (element.classList.contains('carousel-image')) {
-                    carousels[carouselName].images.push(element);
-                } else if (element.classList.contains('carousel-indicator')) {
-                    carousels[carouselName].indicators.push(element);
-                }
-            });
-
-            // Initialize each carousel
-            Object.keys(carousels).forEach(carouselName => {
-                const carousel = carousels[carouselName];
-
-                function showImage(index) {
-                    // Hide all images
-                    carousel.images.forEach((img, i) => {
-                        img.classList.remove('active');
-                        if (i === index) {
-                            img.classList.add('active');
-                        }
-                    });
-
-                    // Update indicators
-                    carousel.indicators.forEach((indicator, i) => {
-                        indicator.classList.toggle('active', i === index);
-                    });
-
-                    carousel.currentIndex = index;
-                }
-
-                // Auto-rotate every 5 seconds
-                setInterval(() => {
-                    const nextIndex = (carousel.currentIndex + 1) % carousel.images.length;
-                    showImage(nextIndex);
-                }, 5000);
-
-                // Allow manual navigation via indicators
-                carousel.indicators.forEach((indicator, index) => {
-                    indicator.addEventListener('click', () => {
-                        showImage(index);
-                    });
-                });
-            });
-        }
-
-        // Initialize carousels when DOM is loaded
-        if (document.readyState === 'loading') {
-            document.addEventListener('DOMContentLoaded', initImageCarousels);
-        } else {
-            initImageCarousels();
-        }
-    </script>
+    <!-- Custom JavaScript -->
+    <script src="js/script.js"></script>
 </body>
 
 </html>
