remove non f3 images

--- a/index.html
+++ b/index.html
@@ -447,12 +447,8 @@
                 <!-- Project 1 -->
                 <div class="bg-white rounded-xl overflow-hidden shadow-lg card-hover">
                     <div class="image-carousel w-full h-80 md:h-96 relative">
-                        <img src="what_we_do/solar_mounting/solar_mat_south.png" alt="Solar Installation"
-                            class="carousel-image active w-full h-full object-cover" data-carousel="solar-mounting">
-                        <img src="what_we_do/solar_mounting/solar_mat_south2.png" alt="Solar Installation"
-                            class="carousel-image w-full h-full object-cover" data-carousel="solar-mounting">
                         <img src="what_we_do/solar_mounting/solar1.png" alt="Solar Installation"
-                            class="carousel-image w-full h-full object-cover" data-carousel="solar-mounting">
+                            class="carousel-image active w-full h-full object-cover" data-carousel="solar-mounting">
                         <img src="what_we_do/solar_mounting/solar2.png" alt="Solar Installation"
                             class="carousel-image w-full h-full object-cover" data-carousel="solar-mounting">
                         <img src="what_we_do/solar_mounting/pari1.jpg" alt="Solar Installation"
@@ -480,8 +476,6 @@
                             <span class="carousel-indicator" data-carousel="solar-mounting" data-index="6"></span>
                             <span class="carousel-indicator" data-carousel="solar-mounting" data-index="7"></span>
                             <span class="carousel-indicator" data-carousel="solar-mounting" data-index="8"></span>
-                            <span class="carousel-indicator" data-carousel="solar-mounting" data-index="9"></span>
-                            <span class="carousel-indicator" data-carousel="solar-mounting" data-index="10"></span>
                         </div>
                     </div>
                     <div class="p-6">
@@ -675,7 +669,7 @@
                             Installation of power line monopoles including foundation works and concrete construction.
                         </p>
                         <ul class="text-sm text-gray-600 space-y-1">
-                            <li><i class="fas fa-check text-red-600 mr-2"></i>Manhize Power Line - 30m</li>
+                            <!-- <li><i class="fas fa-check text-red-600 mr-2"></i>Manhize Power Line - 30m</li> -->
                             <li><i class="fas fa-check text-red-600 mr-2"></i>Monopole Foundations</li>
                             <li><i class="fas fa-check text-red-600 mr-2"></i>Concrete Works</li>
                         </ul>
@@ -763,7 +757,7 @@
 
                     <!-- Team Member 4 -->
                     <div class="bg-gray-50 rounded-xl p-6 text-center card-hover">
-                        <img src="images/staff/Tawanda.jpg" alt="Tawanda Machaka"
+                        <img src="images/staff/tawanda_machaka.png" alt="Tawanda Machaka"
                             class="w-32 h-32 rounded-full mx-auto mb-4 object-cover border-4 border-white shadow-lg team-member-img">
                         <h4 class="text-xl font-bold text-gray-900 mb-1">Tawanda Machaka</h4>
                         <p class="text-red-600 font-semibold mb-2">PM Civil & Structural Engineering</p>
